--- a/Share Beauty App/Views/LX/LXIngredientView.xib
+++ b/Share Beauty App/Views/LX/LXIngredientView.xib
@@ -97,10 +97,16 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" tag="30" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lu7-sy-FdA">
-                    <rect key="frame" x="576" y="531" width="30" height="30"/>
+                    <rect key="frame" x="576" y="531" width="179" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="179" id="PaQ-2B-9si"/>
+                    </constraints>
                 </button>
                 <button opaque="NO" tag="31" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QuP-2v-LZ6">
-                    <rect key="frame" x="576" y="484" width="30" height="30"/>
+                    <rect key="frame" x="576" y="484" width="153" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="153" id="3rU-hG-NfP"/>
+                    </constraints>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
